working water readings shortcut in staff interface

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -340,7 +340,7 @@ template(name='email_validation_check')
 template(name='lease_expiration_check')
     div
     if expiration_date
-        +i name='clock' classes='ui inline image'
+        +i name='clock' classes='ui avatar image'
         |lease expiring 
         |#{lease_expiring}
         
