--- a/client/front.jade
+++ b/client/front.jade
@@ -104,11 +104,11 @@ template(name='model_scroller')
             +view_button
 
 template(name='health_club_status')
-    .ui.inline.header Upper Hot Tub
+    .ui.header Upper Hot Tub
         +water_status slug='upper_hot_tub'
-    .ui.inline.header Lower Hot Tub
+    .ui.header Lower Hot Tub
         +water_status slug='lower_hot_tub'
-    .ui.inline.header Pool
+    .ui.header Pool
         +water_status slug='pool'
 
 
