--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -14,31 +14,42 @@ template(name='staff')
                         |resident
                 //- .ui.header
                 //-     |#{checkedin_members.count} checked in members
-                //- +inline_doc slug='staff_notices' classes='ui small grey header'
+                +inline_doc slug='staff_notices' classes='ui small grey header'
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
-                .ui.big.compact.fluid.button.log_staff_walked
-                    +i name='walking' classes='ui inline image'                
-                    |log hourly shift walk
                 //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
                 //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
                 //- +unit_key_widget
-                .ui.header 
+                a.ui.header(href='readings')
                     +i name='water' classes='ui inline image'                
                     |shift water readings
-                .ui.basic.segment
-                    each shift_pool_readings
-                        .ui.header #{when}
-                            i.remove.small.link.circular.icon.remove_walk(title='remove walk entry')
-                    each shift_upper_hot_tub_readings
-                        .ui.header #{when}
-                            i.remove.small.link.circular.icon.remove_walk(title='remove walk entry')
-                    each shift_lower_hot_tub_readings
-                        .ui.header #{when}
-                            i.remove.small.link.circular.icon.remove_walk(title='remove walk entry')
-                .ui.header 
+                div
+                +ismall name='swim'
+                .ui.small.inline.header 
+                    |pool readings
+                each shift_pool_readings
+                    .item #{ph}ph #{br}br #{temperature}deg #{when}
+                        +remove_button
+                div
+                +ismall name='jacuzzi'
+                .ui.small.inline.header 
+                    |upper hot tub readings
+                each shift_upper_hot_tub_readings
+                    .item #{ph}ph #{br}br #{temperature}deg #{when}
+                        +remove_button
+                div
+                +ismall name='jacuzzi'
+                .ui.small.inline.header 
+                    |lower hot tub readings
+                each shift_lower_hot_tub_readings
+                    .item #{ph}ph #{br}br #{temperature}deg #{when}
+                        +remove_button
+                
+                .ui.inline.header 
                     +i name='walking' classes='ui inline image'                
                     |shift walks
+                .ui.compact.icon.button.log_staff_walked(title='log hourly shift walk')
+                    i.green.plus.icon    
                 .ui.basic.segment
                     each shift_walks
                         .ui.header #{when}
@@ -74,7 +85,7 @@ template(name='staff')
                     .content
                         +schedule
                     .title
-                        i.chat.icon
+                        +i name='chat' classes='ui inline image'
                         |chat
                         i.dropdown.icon
                     .content
@@ -414,5 +425,6 @@ template(name='shift_checklist')
                                 +i name='checkmark' classes='ui inline image'
                                 |submit
                 else
-                    .ui.large.button.create_checklist
-                        |create checklist
+                    .ui.large.fluid.button.create_checklist
+                        +i name='plus' classes='ui inline image'
+                        |no checklist yet, click to create
